# Rank5Quadratics-Research

./: .clang-format  .gitignore  BloomFilter.hpp  CMakeLists.txt  Fraction.hpp  Logger.hpp  README.md  checker_bf_main.cpp  generator_bf_main.cpp  main.cpp  runnner_main.cpp  sample.cpp
Magma_Code/: Section3Computations.txt  Theorem21Computations.magma  genus2_construction.magma  torsion_subgroup_search.magma  verification.magma
Python_Old/: .gitignore  Checker.py  checker3.py  main.ipynb  main.py  oldChecker.py  runner.cpp  squareFreeNumbers.ipynb  testing.py
Python_Old/output/: pairs.txt  pairs_100.txt  pairs_parital200.txt
Python_Old/temp/: magmacode100.mg
tests/: BitsetTest.cpp  FractionTest.cpp  test1.cpp
